--- a/FarmHelper/index.html
+++ b/FarmHelper/index.html
@@ -521,12 +521,290 @@
 
             <!-- Page 3 -Tree Runs -->
             <div class="scrollable-content" style="flex-grow: 1; overflow-y: scroll; padding: 20px;" id="page3">
-                <h1>Tree Runs</h1>
-                <!-- Buttons at Bottom -->
-                <div class="button-row" style="display: flex;justify-content: center; ; position: fixed;right: 14px; left: 4px; bottom: 4px; background-color: #161e33; z-index: 1000;">
-                    <button class="nisbutton nissmallbutton">Previous</button>
-                    <button class="nisbutton nissmallbutton">Next</button>
-                </div>
+                <ul> 
+                  <li>
+                    <h1 class="Area">Tree Runs</h1>
+                  </li>
+                </ul>
+
+                  <!-- Lumbridge-->
+                  <ul>
+                      <li data-min="15" title="Where it all started" data-hidden-title="Requires 15 Farming to plant Acorns">
+                          <div class="Area">Lumbridge</div>
+                          <ul>
+                              <!-- Break -->
+                              <br>
+                              <li>
+                                  <div style="display: inline-block;">Lumbridge Teleport</div>
+                                  <img class="icon" src="https://runescape.wiki/images/Lumbridge_Teleport_icon.png" />
+                                  <ul>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">3 Air Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Air_rune.png" />
+                                      </li>
+                                    	<!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Earth Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Earth_rune.png" />
+                                      </li>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Law Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Law_rune.png" />
+                                      </li>
+                                  </ul>
+                              </li>
+                            	<p>OR</p>
+                              <li>
+                                <div style="display: inline-block;">Lumbridge Lodestone</div>
+                                <img class="icon" src="https://runescape.wiki/images/Lumbridge_lodestone_icon.png" />
+                            </li>
+                          </ul>
+                      </li>
+                  </ul>
+                  <!-- Break -->
+                  <br>
+                  <!-- Varrock-->
+                  <ul>
+                      <li data-min="15" title="Fancy Farming" data-hidden-title="Requires 15 Farming to plant Acorns">
+                          <div class="Area">Varrock Palace</div>
+                          <ul>
+                              <!-- Break -->
+                              <br>
+                              <li>
+                                  <div style="display: inline-block;">Varrock Teleport</div>
+                                  <img class="icon" src="https://runescape.wiki/images/Varrock_Teleport_icon.png" />
+                                  <ul>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">3 Air Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Air_rune.png" />
+                                      </li>
+                                    	<!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Fire Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Fire_rune.png" />
+                                      </li>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Law Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Law_rune.png" />
+                                      </li>
+                                  </ul>
+                              </li>
+                            	<p>OR</p>
+                              <li>
+                                <div style="display: inline-block;">Varrock Lodestone</div>
+                                <img class="icon" src="https://runescape.wiki/images/Lumbridge_lodestone_icon.png" />
+                            </li>
+                            <p>OR</p>
+                              <li>
+                                <div style="display: inline-block;">Ring of Wealth</div>
+                                <img class="icon" src="https://runescape.wiki/images/Ring_of_Wealth.png" />
+                            </li>
+                          </ul>
+                      </li>
+                  </ul>
+                  <!-- Break -->
+                  <br>
+                  <!-- Falador-->
+                  <ul>
+                      <li data-min="15" title="Courtesy of the White knights" data-hidden-title="Requires 15 Farming to plant Acorns">
+                          <div class="Area">Falador Park</div>
+                          <ul>
+                              <!-- Break -->
+                              <br>
+                              <li>
+                                  <div style="display: inline-block;">Falador Teleport</div>
+                                  <img class="icon" src="https://runescape.wiki/images/Falador_Teleport_icon.png" />
+                                  <ul>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">3 Air Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Air_rune.png" />
+                                      </li>
+                                    	<!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Water Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Water_rune.png" />
+                                      </li>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">1 Law Runes</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Law_rune.png" />
+                                      </li>
+                                  </ul>
+                              </li>
+                            	<p>OR</p>
+                              <li>
+                                <div style="display: inline-block;">Falador Lodestone</div>
+                                <img class="icon" src="https://runescape.wiki/images/Falador_lodestone_icon.png" />
+                            </li>
+                            <p>OR</p>
+                              <li>
+                                <div style="display: inline-block;" title = "3 Times per day">Modified Blacksmith's Helmet</div>
+                                <img class="icon" src="https://runescape.wiki/images/Modified_blacksmith's_helmet.png" title = "Hey :)"/>
+                            </li>
+                          </ul>
+                      </li>
+                  </ul>
+                  <!-- Break -->
+                  <br>
+                  <!-- Port Phasmatys -->
+                  <div>
+                      <ul>
+                          <li>
+                              <div class="Area">Port Phasmatys</div>
+                              <ul>
+                                  <!-- Break -->
+                                  <br>
+                                  <li>
+                                      <div style="display: inline-block;">Ectophial</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Ectophial.png" />
+                                  </li>
+                                  <p>OR</p>
+                                  <li>
+                                      <div style="display: inline-block;">Canifis Lodestone</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Canifis_lodestone_icon.png" />
+                                  </li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- Break -->
+                  <br>
+                  <!-- Prifddinas -->
+                  <div>
+                      <ul>
+                          <li data-min="75" data-hidden-title="Requires 75 Farming, complete Plagues End">
+                              <div class="Area">Prifddinas</div>
+                              <ul>
+                                  <!-- Break -->
+                                  <br>
+                                  <li>
+                                      <div style="display: inline-block;">Attuned Crystal Teleport Seed</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Attuned_crystal_teleport_seed.png" />
+                                  </li>
+                                  <p>OR</p>
+                                  <li title="ALt+P">
+                                      <div style="display: inline-block;">Prifddinas Lodestone</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Prifddinas_lodestone_icon.png" />
+                                  </li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- Break -->
+                  <br>
+                  <!-- Manor Farm -->
+                  <div>
+                      <ul>
+                          <li>
+                              <div class="Area">Manor Farm</div>
+                              <ul>
+                                  <!-- Break -->
+                                  <br>
+                                  <li data-min="57" data-hidden-title="Requires 57 Farming, complete Ardougne Medium tasks">
+                                      <div style="display: inline-block;">Manor Farm Teleport</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Manor_farm_Teleport_icon.png" />
+                                  </li>
+                                  <!-- Break -->
+                                  <br>
+                                  <li data-max="57" data-hidden-title="Complete Ardougne Medium tasks, use Manor Farm Teleport">
+                                      <div style="display: inline-block;">Ardougne Lodestone</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Ardougne_lodestone_icon.png" />
+                                  </li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- Break -->
+                  <br>
+                  <!-- Wilderness -->
+                  <div>
+                      <ul>
+                          <li>
+                              <div class="Area">Wilderness</div>
+                              <ul>
+                                  <!-- Break -->
+                                  <br>
+                                  <li>
+                                      <div style="display: inline-block;">Wilderness Sword</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Wilderness_sword_4.png" />
+                                  </li>
+                                  <p>OR</p>
+                                  <li>
+                                      <div style="display: inline-block;">Wilderness Lodestone</div>
+                                      <img class="icon" src="https://runescape.wiki/images/Wilderness_Crater_lodestone_icon.png" />
+                                  </li>
+                                  <p>OR</p>
+                                  <li>
+                                      <div style="display: inline-block;"> Portable Obelisk (Level 35)</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Portable_obelisk.png" />
+                                  </li>
+                              </ul>
+                          </li>
+                      </ul>
+                      </div>
+                      <!-- Break -->
+                      <br>
+                      <!-- Catherby -->
+                      <div>
+                          <ul>
+                              <li>
+                                  <div class="Area">Catherby</div>
+                                  <ul>
+                                      <!-- Break -->
+                                      <br>
+                                      <li>
+                                          <div style="display: inline-block;">Camelot Teleport</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Camelot_Teleport_icon.png" />
+                                          <ul>
+                                              <!-- Break -->
+                                              <br>
+                                              <li>
+                                                  <div style="display: inline-block;">5 Air Runes</div>
+                                                  <img class="icon" src="https://runescape.wiki/images/Air_rune.png" />
+                                              </li>
+                                              <!-- Break -->
+                                              <br>
+                                              <li>
+                                                  <div style="display: inline-block;">1 Law Rune</div>
+                                                  <img class="icon" src="https://runescape.wiki/images/Law_rune.png" />
+                                              </li>
+                                          </ul>
+                                      </li>
+                                      <p>OR</p>
+                                      <li>
+                                          <div style="display: inline-block;">Catherby Lodestone</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Catherby_lodestone_icon.png" />
+                                      </li>
+                                      <p>OR</p>
+                                      <li>
+                                          <div style="display: inline-block;" title="3 times per day, maximum">Modified Botanist's Mask</div>
+                                          <img class="icon" src="https://runescape.wiki/images/Modified_botanist's_mask.png" />
+                                      </li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      </div>
+                      <!-- Break -->
+                      <br>
+                      <!-- Buttons at Bottom -->
+                      <div class="button-row" style="display: flex;justify-content: center; ; position: fixed;right: 14px; left: 4px; bottom: 4px; background-color: #161e33; z-index: 1000;">
+                          <button class="nisbutton nissmallbutton prev-btn">Previous</button>
+                          <button class="nisbutton nissmallbutton next-btn">Next</button>
+                      </div>
             </div>
 
             <!-- Page 4 -Fruit Tree Runs -->
