--- a/FarmHelper/index.html
+++ b/FarmHelper/index.html
@@ -124,7 +124,9 @@
         <!-- Page 1 - Home -->
         <div class="scrollable-content" style="flex-grow: 1; overflow-y: scroll; padding: 20px;" id="page1">
             <div id="page1" class="page checklist-wrapper">
-                <h2>Useful items for any Farming run</h2>
+                <h2 style="color: #D2691E;">Check Settings for Guide Mode!</h2>
+              	<Br>
+              	<h2>Useful items for any Farming run</h2>
                 <h4>(Hover for more information)</h4>
 
                 <ul>
