Fixed incorrect Bush Patch label

--- a/FarmHelper/index.html
+++ b/FarmHelper/index.html
@@ -1072,7 +1072,7 @@
                   <!-- Etceteria-->
                   <ul>
                       <li data-min="10" title="" data-hidden-title="Requires 10 Farming to plant Redberries">
-                          <div class="Area">Tree Gnome Stronghold</div>
+                          <div class="Area">Etceteria/div>
                           <ul>
                               <!-- Break -->
                               <br>
@@ -1081,7 +1081,7 @@
                                   <img class="icon" src="https://runescape.wiki/images/Spirit_tree.png" />
                               </li>
                             	<p>OR</p>
-                              <li  title = "Option 7">
+                              <li  title = "Requires Fremminik Elites">
                                 <div style="display: inline-block;">Enchanted Lyre</div>
                                 <img class="icon" src="https://runescape.wiki/images/Enchanted_lyre.png" />
                             </li>
