--- a/FarmHelper/index.html
+++ b/FarmHelper/index.html
@@ -1069,10 +1069,10 @@
                   </ul>
                   <!-- Break -->
                   <br>
-                  <!-- Etceteria-->
+                  <!-- Etceteria -->
                   <ul>
                       <li data-min="10" title="" data-hidden-title="Requires 10 Farming to plant Redberries">
-                          <div class="Area">Etceteria/div>
+                          <div class="Area">Etceteria </div>
                           <ul>
                               <!-- Break -->
                               <br>
