--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -19,7 +19,7 @@
     const icons = {
       AbilityBarHeader: null,
       AbilityBar14x1: null,
-      AbilityBar7x2: null,
+      AbilityBar7X2: null,
       AbilityBar1x14: null,
       AbilityBar2x7: null
     };
