--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -18,10 +18,10 @@
   <script>
     const icons = {
       AbilityBarHeader: null,
-      AbilityBar14X1: null,
-      AbilityBar7X2: null,
-      AbilityBar1X14: null,
-      AbilityBar2X7: null
+      AbilityBar14x1: null,
+      AbilityBar7x2: null,
+      AbilityBar1x14: null,
+      AbilityBar2x7: null
     };
 
     function setStatus(msg, color = "lime") {
