--- a/Leagues/index.html
+++ b/Leagues/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Google Sheets to Table</title>
+  <title>Google Sheets JSON to Table</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
@@ -10,34 +10,47 @@
   </style>
 </head>
 <body>
-  <h2>Google Sheets to Table Viewer</h2>
-  <input type="text" id="sheetUrl" placeholder="Paste published CSV link here" style="width: 80%;">
+  <h2>Google Sheets JSON Viewer</h2>
+  <input type="text" id="sheetId" placeholder="Enter Google Sheet ID" style="width: 80%;">
   <button onclick="loadSheet()">Load Table</button>
 
   <div id="tableContainer"></div>
 
   <script>
     function loadSheet() {
-      const proxy = "https://cors-anywhere.herokuapp.com/";
-      const url = proxy + document.getElementById('sheetUrl').value;
+      const sheetId = document.getElementById('sheetId').value;
+      const url = `https://spreadsheets.google.com/feeds/list/${sheetId}/od6/public/values?alt=json`;
 
       fetch(url)
-        .then(response => response.text())
-        .then(csv => {
-          const rows = csv.split('\n').map(row => row.split(','));
-          let html = '<table><thead><tr>';
-          rows[0].forEach(header => html += `<th>${header}</th>`);
-          html += '</tr></thead><tbody>';
-          for (let i = 1; i < rows.length; i++) {
-            html += '<tr>';
-            rows[i].forEach(cell => html += `<td>${cell}</td>`);
-            html += '</tr>';
+        .then(response => response.json())
+        .then(data => {
+          const entries = data.feed.entry;
+          if (!entries || entries.length === 0) {
+            document.getElementById('tableContainer').innerHTML = '<p>No data found.</p>';
+            return;
           }
+
+          let html = '<table><thead><tr>';
+          const headers = Object.keys(entries[0])
+            .filter(key => key.startsWith('gsx$'))
+            .map(key => key.replace('gsx$', ''));
+          headers.forEach(header => html += `<th>${header}</th>`);
+          html += '</tr></thead><tbody>';
+
+          entries.forEach(entry => {
+            html += '<tr>';
+            headers.forEach(header => {
+              html += `<td>${entry['gsx$' + header]['$t']}</td>`;
+            });
+            html += '</tr>';
+          });
+
           html += '</tbody></table>';
           document.getElementById('tableContainer').innerHTML = html;
         })
         .catch(err => {
-          document.getElementById('tableContainer').innerHTML = `<p style="color:red;">Error loading sheet. Make sure it's published as CSV and publicly accessible.</p>`;
+          console.error(err);
+          document.getElementById('tableContainer').innerHTML = `<p style="color:red;">Error loading data. Make sure the sheet is published and the ID is correct.</p>`;
         });
     }
   </script>
