--- a/Leagues/index.html
+++ b/Leagues/index.html
@@ -14,9 +14,9 @@
   <div id="tableContainer">Loading...</div>
 
   <script>
-    const sheetId = "1xFDWDA93U5VhL1htLBsNN8edgrGNQkiS"; // Replace with your actual Sheet ID
+    const sheetId = "1D9wCL36JAbEUr9OaWpEXfe7lDtcLk4_FBsvXhBT_FGg"; // Replace with your actual Sheet ID
     const apiKey = "AIzaSyBNh1WqteEDRI4smB9xNWgRceGjoDvXEN4";   // Replace with your actual API Key
-    const sheetName = "LeaguesTasks!A1:Z100"; // Replace with your tab name
+    const sheetName = "Sheet1!A1:Z100"; // Replace with your tab name
 
     const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?key=${apiKey}`;
 
